src/objects/TSS_Survey__c.object
<CustomObject>
    <description>This is created for TSS Application - Survey</description>
    <fields>
        <fullName>Agency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub Agency</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>TSS Surveys</relationshipLabel>
        <relationshipName>TSS_Surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agency_txt__c</fullName>
        <label>Agency</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Building_Contact_Yes_Score__c</fullName>
        <inlineHelpText>0 - No
1 - Yes</inlineHelpText>
        <label>Know whom to contact?</label>
        <summarizedField>TSS_Response__c.Response_Score__c</summarizedField>
        <summaryFilterItems>
            <field>TSS_Response__c.Service_Category__c</field>
            <operation>equals</operation>
            <value>Know who to call Building Issues</value>
        </summaryFilterItems>
        <summaryForeignKey>TSS_Response__c.TSS_Survey__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Building_LCP__c</fullName>
        <label>Building LCP</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bureau_txt__c</fullName>
        <label>Bureau</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cleanliness_Avg_Score__c</fullName>
        <formula>IF(Total_Count_Cleanliness__c &gt;0, Total_Score_Cleanliness__c /  Total_Count_Cleanliness__c, 0)</formula>
        <inlineHelpText>5 – Highly Satisfied
4 – Satisfied
3 – Neutral
2 – Dissatisfied
1 – Highly Dissatisfied
0 – Cannot Rate</inlineHelpText>
        <label>Quality of Cleanliness - Survey Avg</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cleanliness_Top_2__c</fullName>
        <formula>IF(Total_Count_Cleanliness__c&gt;0, Top_2_Count_Cleanliness__c / Total_Count_Cleanliness__c, 0)</formula>
        <label>Quality of Cleanliness - Survey Top 2 %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Condition_Avg_Score__c</fullName>
        <formula>IF(Total_Count_Condition__c&gt;0, Total_Score_Condition__c /  Total_Count_Condition__c, 0)</formula>
        <inlineHelpText>5 – Highly Satisfied
4 – Satisfied
3 – Neutral
2 – Dissatisfied
1 – Highly Dissatisfied
0 – Cannot Rate</inlineHelpText>
        <label>Condition of Facility - Survey Avg</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Condition_Top_2__c</fullName>
        <formula>IF(Total_Count_Condition__c&gt;0, Top_2_Count_Condition__c / Total_Count_Condition__c, 0)</formula>
        <label>Condition of Facility - Survey Top 2 %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>TSS Surveys</relationshipLabel>
        <relationshipName>TSS_Surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Elevators_Score__c</fullName>
        <inlineHelpText>5 – Highly Satisfied
4 – Satisfied
3 – Neutral
2 – Dissatisfied
1 – Highly Dissatisfied
0 – Cannot Rate</inlineHelpText>
        <label>Elevators - Survey Avg</label>
        <summarizedField>TSS_Response__c.Response_Score__c</summarizedField>
        <summaryFilterItems>
            <field>TSS_Response__c.Service_Category__c</field>
            <operation>equals</operation>
            <value>Elevators</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>TSS_Response__c.Response_Score__c</field>
            <operation>greaterOrEqual</operation>
            <value>1</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>TSS_Response__c.Response_Score__c</field>
            <operation>lessOrEqual</operation>
            <value>5</value>
        </summaryFilterItems>
        <summaryForeignKey>TSS_Response__c.TSS_Survey__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>FY__c</fullName>
        <label>FY</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FY14</fullName>
                </value>
                <value>
                    <fullName>FY15</fullName>
                </value>
                <value>
                    <fullName>FY16</fullName>
                </value>
                <value>
                    <fullName>FY17</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Location_Code_Plus__c</fullName>
        <formula>TSS_Result_Action_Plan__r.Location_Code_Plus__c</formula>
        <label>Location Code Plus</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meeting_Space_Score__c</fullName>
        <label>Meeting Space - Survey Avg</label>
        <summarizedField>TSS_Response__c.Response_Score__c</summarizedField>
        <summaryFilterItems>
            <field>TSS_Response__c.Service_Category__c</field>
            <operation>equals</operation>
            <value>Meeting Space</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>TSS_Response__c.Response_Score__c</field>
            <operation>greaterOrEqual</operation>
            <value>1</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>TSS_Response__c.Response_Score__c</field>
            <operation>lessOrEqual</operation>
            <value>5</value>
        </summaryFilterItems>
        <summaryForeignKey>TSS_Response__c.TSS_Survey__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Other_Unidentified_Agency__c</fullName>
        <label>Other Unidentified Agency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Overall_Satisfaction_Score__c</fullName>
        <inlineHelpText>5 – Highly Satisfied
4 – Satisfied
3 – Neutral
2 – Dissatisfied
1 – Highly Dissatisfied
0 – Cannot Rate</inlineHelpText>
        <label>Survey Overall Satisfaction</label>
        <summarizedField>TSS_Response__c.Response_Score__c</summarizedField>
        <summaryFilterItems>
            <field>TSS_Response__c.Service_Category__c</field>
            <operation>equals</operation>
            <value>Overall Satisfaction</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>TSS_Response__c.Response_Score__c</field>
            <operation>greaterOrEqual</operation>
            <value>1</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>TSS_Response__c.Response_Score__c</field>
            <operation>lessOrEqual</operation>
            <value>5</value>
        </summaryFilterItems>
        <summaryForeignKey>TSS_Response__c.TSS_Survey__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Parent_Agency__c</fullName>
        <formula>IF(ISBLANK(Agency__r.ParentId), Agency__r.Name , Agency__r.Parent.Name)</formula>
        <label>Agency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Personal_WkSpace_Avg_Score__c</fullName>
        <formula>IF(Total_Count_Personal_WkSpace__c &gt;0, Total_Score_Personal_WkSpace__c /  Total_Count_Personal_WkSpace__c, 0)</formula>
        <inlineHelpText>5 – Highly Satisfied
4 – Satisfied
3 – Neutral
2 – Dissatisfied
1 – Highly Dissatisfied
0 – Cannot Rate</inlineHelpText>
        <label>Personal Workspace - Survey Avg</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Personal_WkSpace_Top_2__c</fullName>
        <formula>IF(Total_Count_Personal_WkSpace__c &gt;0, Top_2_Count_Personal_WkSpace__c / Total_Count_Personal_WkSpace__c, 0)</formula>
        <label>Personal Workspace - Survey Top 2 %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Personal_Workspace_Demographics__c</fullName>
        <inlineHelpText>Demographics of personal workspace</inlineHelpText>
        <label>Personal Workspace</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ResponseId__c</fullName>
        <externalId>true</externalId>
        <label>ResponseId</label>
        <length>25</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Security_Score__c</fullName>
        <label>Hidden Total - Security</label>
        <summarizedField>TSS_Response__c.Response_Score__c</summarizedField>
        <summaryFilterItems>
            <field>TSS_Response__c.Service_Category__c</field>
            <operation>equals</operation>
            <value>Security</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>TSS_Response__c.Response_Score__c</field>
            <operation>greaterOrEqual</operation>
            <value>1</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>TSS_Response__c.Response_Score__c</field>
            <operation>lessOrEqual</operation>
            <value>5</value>
        </summaryFilterItems>
        <summaryForeignKey>TSS_Response__c.TSS_Survey__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Security_Survey_Avg__c</fullName>
        <formula>IF(Total_Count_Security__c&gt;0, Security_Score__c / Total_Count_Security__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Security - Survey Avg</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TSS_Result_Action_Plan__c</fullName>
        <label>TSS Result Action Plan</label>
        <referenceTo>TSS_Result_Action_Plan__c</referenceTo>
        <relationshipLabel>TSS Surveys</relationshipLabel>
        <relationshipName>TSS_Surveys</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Top_2_Count_Cleanliness__c</fullName>
        <label>Hidden Top 2 Count - Cleanliness</label>
        <summaryFilterItems>
            <field>TSS_Response__c.Service_Category__c</field>
            <operation>equals</operation>
            <value>Quality of Cleanliness</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>TSS_Response__c.Response_Score__c</field>
            <operation>greaterOrEqual</operation>
            <value>4</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>TSS_Response__c.Response_Score__c</field>
            <operation>lessOrEqual</operation>
            <value>5</value>
        </summaryFilterItems>
        <summaryForeignKey>TSS_Response__c.TSS_Survey__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Top_2_Count_Condition__c</fullName>
        <label>Hidden Top 2 Count - Condition</label>
        <summaryFilterItems>
            <field>TSS_Response__c.Service_Category__c</field>
            <operation>equals</operation>
            <value>Condition of Facility</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>TSS_Response__c.Response_Score__c</field>
            <operation>greaterOrEqual</operation>
            <value>4</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>TSS_Response__c.Response_Score__c</field>
            <operation>lessOrEqual</operation>
            <value>5</value>
        </summaryFilterItems>
        <summaryForeignKey>TSS_Response__c.TSS_Survey__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Top_2_Count_Elevators__c</fullName>
        <label>Hidden Top 2 Count - Elevator</label>
        <summaryFilterItems>
            <field>TSS_Response__c.Service_Category__c</field>
            <operation>equals</operation>
            <value>Elevators</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>TSS_Response__c.Response_Score__c</field>
            <operation>greaterOrEqual</operation>
            <value>4</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>TSS_Response__c.Response_Score__c</field>
            <operation>lessOrEqual</operation>
            <value>5</value>
        </summaryFilterItems>
        <summaryForeignKey>TSS_Response__c.TSS_Survey__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Top_2_Count_MeetingSpace__c</fullName>
        <label>Hidden Top 2 Count - MeetingSpace</label>
        <summaryFilterItems>
            <field>TSS_Response__c.Service_Category__c</field>
            <operation>equals</operation>
            <value>Meeting Space</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>TSS_Response__c.Response_Score__c</field>
            <operation>greaterOrEqual</operation>
            <value>4</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>TSS_Response__c.Response_Score__c</field>
            <operation>lessOrEqual</operation>
            <value>5</value>
        </summaryFilterItems>
        <summaryForeignKey>TSS_Response__c.TSS_Survey__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Top_2_Count_Overall_Satisfaction__c</fullName>
        <label>Hidden Top 2 Ct - Overall Satisfaction</label>
        <summaryFilterItems>
            <field>TSS_Response__c.Service_Category__c</field>
            <operation>equals</operation>
            <value>Overall Satisfaction</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>TSS_Response__c.Response_Score__c</field>
            <operation>greaterOrEqual</operation>
            <value>4</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>TSS_Response__c.Response_Score__c</field>
            <operation>lessOrEqual</operation>
            <value>5</value>
        </summaryFilterItems>
        <summaryForeignKey>TSS_Response__c.TSS_Survey__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Top_2_Count_Personal_WkSpace__c</fullName>
        <label>Hidden Top 2 Count - Personal WkSpace</label>
        <summaryFilterItems>
            <field>TSS_Response__c.Service_Category__c</field>
            <operation>equals</operation>
            <value>Personal Workspace</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>TSS_Response__c.Response_Score__c</field>
            <operation>greaterOrEqual</operation>
            <value>4</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>TSS_Response__c.Response_Score__c</field>
            <operation>lessOrEqual</operation>
            <value>5</value>
        </summaryFilterItems>
        <summaryForeignKey>TSS_Response__c.TSS_Survey__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Top_2_Count_Security__c</fullName>
        <label>Hidden Top 2 Count - Security</label>
        <summaryFilterItems>
            <field>TSS_Response__c.Service_Category__c</field>
            <operation>equals</operation>
            <value>Security</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>TSS_Response__c.Response_Score__c</field>
            <operation>greaterOrEqual</operation>
            <value>4</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>TSS_Response__c.Response_Score__c</field>
            <operation>lessOrEqual</operation>
            <value>5</value>
        </summaryFilterItems>
        <summaryForeignKey>TSS_Response__c.TSS_Survey__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Count_Cleanliness__c</fullName>
        <label>Hidden Response Count - Cleanliness</label>
        <summaryFilterItems>
            <field>TSS_Response__c.Service_Category__c</field>
            <operation>equals</operation>
            <value>Quality of Cleanliness</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>TSS_Response__c.Type_of_Response__c</field>
            <operation>equals</operation>
            <value>Scale</value>
        </summaryFilterItems>
        <summaryForeignKey>TSS_Response__c.TSS_Survey__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Count_Condition__c</fullName>
        <label>Hidden Response Count - Condition</label>
        <summaryFilterItems>
            <field>TSS_Response__c.Service_Category__c</field>
            <operation>equals</operation>
            <value>Condition of Facility</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>TSS_Response__c.Type_of_Response__c</field>
            <operation>equals</operation>
            <value>Scale</value>
        </summaryFilterItems>
        <summaryForeignKey>TSS_Response__c.TSS_Survey__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Count_Personal_WkSpace__c</fullName>
        <label>Hidden Response Count - Personal WkSpace</label>
        <summaryFilterItems>
            <field>TSS_Response__c.Service_Category__c</field>
            <operation>equals</operation>
            <value>Personal Workspace</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>TSS_Response__c.Type_of_Response__c</field>
            <operation>equals</operation>
            <value>Scale</value>
        </summaryFilterItems>
        <summaryForeignKey>TSS_Response__c.TSS_Survey__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Count_Security__c</fullName>
        <label>Hidden Response Count - Security</label>
        <summaryFilterItems>
            <field>TSS_Response__c.Service_Category__c</field>
            <operation>equals</operation>
            <value>Security</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>TSS_Response__c.Type_of_Response__c</field>
            <operation>equals</operation>
            <value>Scale</value>
        </summaryFilterItems>
        <summaryForeignKey>TSS_Response__c.TSS_Survey__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Score_Cleanliness__c</fullName>
        <label>Hidden Total - Cleanliness</label>
        <summarizedField>TSS_Response__c.Response_Score__c</summarizedField>
        <summaryFilterItems>
            <field>TSS_Response__c.Service_Category__c</field>
            <operation>equals</operation>
            <value>Quality of Cleanliness</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>TSS_Response__c.Response_Score__c</field>
            <operation>greaterOrEqual</operation>
            <value>1</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>TSS_Response__c.Response_Score__c</field>
            <operation>lessOrEqual</operation>
            <value>5</value>
        </summaryFilterItems>
        <summaryForeignKey>TSS_Response__c.TSS_Survey__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Score_Condition__c</fullName>
        <label>Hidden Total - Condition</label>
        <summarizedField>TSS_Response__c.Response_Score__c</summarizedField>
        <summaryFilterItems>
            <field>TSS_Response__c.Service_Category__c</field>
            <operation>equals</operation>
            <value>Condition of Facility</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>TSS_Response__c.Response_Score__c</field>
            <operation>greaterOrEqual</operation>
            <value>1</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>TSS_Response__c.Response_Score__c</field>
            <operation>lessOrEqual</operation>
            <value>5</value>
        </summaryFilterItems>
        <summaryForeignKey>TSS_Response__c.TSS_Survey__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Score_Personal_WkSpace__c</fullName>
        <label>Hidden Total - Personal WkSpace</label>
        <summarizedField>TSS_Response__c.Response_Score__c</summarizedField>
        <summaryFilterItems>
            <field>TSS_Response__c.Service_Category__c</field>
            <operation>equals</operation>
            <value>Personal Workspace</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>TSS_Response__c.Response_Score__c</field>
            <operation>greaterOrEqual</operation>
            <value>1</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>TSS_Response__c.Response_Score__c</field>
            <operation>lessOrEqual</operation>
            <value>5</value>
        </summaryFilterItems>
        <summaryForeignKey>TSS_Response__c.TSS_Survey__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Virtual_Employee__c</fullName>
        <description>Are you a &quot;Virtual&quot; Employee?</description>
        <label>Virtual Employee</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>TSS Survey</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>FY__c</columns>
        <columns>Overall_Satisfaction_Score__c</columns>
        <columns>ResponseId__c</columns>
        <columns>TSS_Result_Action_Plan__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Contact__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>TSS Survey Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TSS Surveys</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>